antlr/TSparser/CronoScriptParser.ts
// Generated from CronoScript.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CronoScriptListener } from "./CronoScriptListener";

export class CronoScriptParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly PLUS = 27;
	public static readonly MINUS = 28;
	public static readonly TO = 29;
	public static readonly TOPLUS = 30;
	public static readonly DELAY = 31;
	public static readonly DELAYPLUS = 32;
	public static readonly DELAYMINUS = 33;
	public static readonly EQUALS = 34;
	public static readonly MULT = 35;
	public static readonly DIV = 36;
	public static readonly STRING_KW = 37;
	public static readonly DATE_KW = 38;
	public static readonly SPAN_KW = 39;
	public static readonly DURATION_KW = 40;
	public static readonly EVENT_KW = 41;
	public static readonly TASK_KW = 42;
	public static readonly TIMELINE_KW = 43;
	public static readonly DATE = 44;
	public static readonly OPTION = 45;
	public static readonly TAG = 46;
	public static readonly OPTION_KEY = 47;
	public static readonly ID = 48;
	public static readonly INT = 49;
	public static readonly STRING = 50;
	public static readonly COMMENT = 51;
	public static readonly WS = 52;
	public static readonly RULE_cronodile = 0;
	public static readonly RULE_timeline = 1;
	public static readonly RULE_element = 2;
	public static readonly RULE_task = 3;
	public static readonly RULE_event = 4;
	public static readonly RULE_span = 5;
	public static readonly RULE_date = 6;
	public static readonly RULE_simpleDate = 7;
	public static readonly RULE_delayedDate = 8;
	public static readonly RULE_duration = 9;
	public static readonly RULE_timeUnit = 10;
	public static readonly RULE_variableDeclaration = 11;
	public static readonly RULE_type = 12;
	public static readonly RULE_expression = 13;
	public static readonly RULE_string = 14;
	public static readonly RULE_option = 15;
	public static readonly RULE_tag = 16;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"cronodile", "timeline", "element", "task", "event", "span", "date", "simpleDate", 
		"delayedDate", "duration", "timeUnit", "variableDeclaration", "type", 
		"expression", "string", "option", "tag",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'['", "','", "']'", "'('", "')'", "'s'", "'second'", "'seconds'", 
		"'min'", "'minute'", "'minutes'", "'h'", "'hour'", "'hours'", "'d'", "'day'", 
		"'days'", "'w'", "'week'", "'weeks'", "'m'", "'month'", "'months'", "'y'", 
		"'year'", "'years'", "'+'", "'-'", "'>'", "'>+'", "'...'", undefined, 
		undefined, "'='", "'*'", "'/'", "'string'", "'date'", "'span'", "'duration'", 
		"'event'", "'task'", "'timeline'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "PLUS", 
		"MINUS", "TO", "TOPLUS", "DELAY", "DELAYPLUS", "DELAYMINUS", "EQUALS", 
		"MULT", "DIV", "STRING_KW", "DATE_KW", "SPAN_KW", "DURATION_KW", "EVENT_KW", 
		"TASK_KW", "TIMELINE_KW", "DATE", "OPTION", "TAG", "OPTION_KEY", "ID", 
		"INT", "STRING", "COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CronoScriptParser._LITERAL_NAMES, CronoScriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CronoScriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CronoScript.g4"; }

	// @Override
	public get ruleNames(): string[] { return CronoScriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CronoScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CronoScriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public cronodile(): CronodileContext {
		let _localctx: CronodileContext = new CronodileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CronoScriptParser.RULE_cronodile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 38;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CronoScriptParser.OPTION || _la === CronoScriptParser.TAG) {
				{
				this.state = 36;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case CronoScriptParser.OPTION:
					{
					this.state = 34;
					this.option();
					}
					break;
				case CronoScriptParser.TAG:
					{
					this.state = 35;
					this.tag();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 40;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 47;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CronoScriptParser.T__0 || _la === CronoScriptParser.T__3 || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (CronoScriptParser.STRING_KW - 37)) | (1 << (CronoScriptParser.DATE_KW - 37)) | (1 << (CronoScriptParser.SPAN_KW - 37)) | (1 << (CronoScriptParser.DURATION_KW - 37)) | (1 << (CronoScriptParser.EVENT_KW - 37)) | (1 << (CronoScriptParser.TASK_KW - 37)) | (1 << (CronoScriptParser.TIMELINE_KW - 37)) | (1 << (CronoScriptParser.ID - 37)) | (1 << (CronoScriptParser.STRING - 37)))) !== 0)) {
				{
				this.state = 45;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 41;
					this.variableDeclaration();
					}
					break;

				case 2:
					{
					this.state = 42;
					this.timeline();
					}
					break;

				case 3:
					{
					this.state = 43;
					this.task();
					}
					break;

				case 4:
					{
					this.state = 44;
					this.event();
					}
					break;
				}
				}
				this.state = 49;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 50;
			this.match(CronoScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public timeline(): TimelineContext {
		let _localctx: TimelineContext = new TimelineContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CronoScriptParser.RULE_timeline);
		let _la: number;
		try {
			this.state = 75;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 52;
				this.match(CronoScriptParser.ID);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 54;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CronoScriptParser.ID || _la === CronoScriptParser.STRING) {
					{
					this.state = 53;
					this.string();
					}
				}

				this.state = 56;
				this.match(CronoScriptParser.T__0);
				this.state = 65;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CronoScriptParser.T__0 || _la === CronoScriptParser.T__3 || _la === CronoScriptParser.ID || _la === CronoScriptParser.STRING) {
					{
					this.state = 57;
					this.element();
					this.state = 62;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === CronoScriptParser.T__1) {
						{
						{
						this.state = 58;
						this.match(CronoScriptParser.T__1);
						this.state = 59;
						this.element();
						}
						}
						this.state = 64;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 67;
				this.match(CronoScriptParser.T__2);
				this.state = 72;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CronoScriptParser.OPTION || _la === CronoScriptParser.TAG) {
					{
					this.state = 70;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case CronoScriptParser.OPTION:
						{
						this.state = 68;
						this.option();
						}
						break;
					case CronoScriptParser.TAG:
						{
						this.state = 69;
						this.tag();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					this.state = 74;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public element(): ElementContext {
		let _localctx: ElementContext = new ElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CronoScriptParser.RULE_element);
		try {
			this.state = 80;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 77;
				this.timeline();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 78;
				this.task();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 79;
				this.event();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public task(): TaskContext {
		let _localctx: TaskContext = new TaskContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CronoScriptParser.RULE_task);
		let _la: number;
		try {
			this.state = 96;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CronoScriptParser.ID:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 82;
				this.match(CronoScriptParser.ID);
				}
				break;
			case CronoScriptParser.T__3:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 83;
				this.match(CronoScriptParser.T__3);
				this.state = 84;
				this.span();
				this.state = 85;
				this.match(CronoScriptParser.T__4);
				this.state = 87;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
				case 1:
					{
					this.state = 86;
					this.string();
					}
					break;
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CronoScriptParser.OPTION || _la === CronoScriptParser.TAG) {
					{
					this.state = 91;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case CronoScriptParser.OPTION:
						{
						this.state = 89;
						this.option();
						}
						break;
					case CronoScriptParser.TAG:
						{
						this.state = 90;
						this.tag();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					this.state = 95;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public event(): EventContext {
		let _localctx: EventContext = new EventContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CronoScriptParser.RULE_event);
		let _la: number;
		try {
			this.state = 112;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CronoScriptParser.ID:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 98;
				this.match(CronoScriptParser.ID);
				}
				break;
			case CronoScriptParser.T__3:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 99;
				this.match(CronoScriptParser.T__3);
				this.state = 100;
				this.date();
				this.state = 101;
				this.match(CronoScriptParser.T__4);
				this.state = 103;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
				case 1:
					{
					this.state = 102;
					this.string();
					}
					break;
				}
				this.state = 109;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === CronoScriptParser.OPTION || _la === CronoScriptParser.TAG) {
					{
					this.state = 107;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case CronoScriptParser.OPTION:
						{
						this.state = 105;
						this.option();
						}
						break;
					case CronoScriptParser.TAG:
						{
						this.state = 106;
						this.tag();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					this.state = 111;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public span(): SpanContext {
		let _localctx: SpanContext = new SpanContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CronoScriptParser.RULE_span);
		try {
			this.state = 123;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 19, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 114;
				this.match(CronoScriptParser.ID);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 115;
				this.date();
				this.state = 116;
				this.match(CronoScriptParser.TO);
				this.state = 117;
				this.date();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 119;
				this.date();
				this.state = 120;
				this.match(CronoScriptParser.TOPLUS);
				this.state = 121;
				this.duration(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public date(): DateContext {
		let _localctx: DateContext = new DateContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CronoScriptParser.RULE_date);
		try {
			this.state = 128;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 125;
				this.match(CronoScriptParser.ID);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 126;
				this.simpleDate(0);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 127;
				this.delayedDate();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public simpleDate(): SimpleDateContext;
	public simpleDate(_p: number): SimpleDateContext;
	// @RuleVersion(0)
	public simpleDate(_p?: number): SimpleDateContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: SimpleDateContext = new SimpleDateContext(this._ctx, _parentState);
		let _prevctx: SimpleDateContext = _localctx;
		let _startState: number = 14;
		this.enterRecursionRule(_localctx, 14, CronoScriptParser.RULE_simpleDate, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CronoScriptParser.ID:
				{
				this.state = 131;
				this.match(CronoScriptParser.ID);
				}
				break;
			case CronoScriptParser.DATE:
				{
				this.state = 132;
				this.match(CronoScriptParser.DATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 143;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 23, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 141;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 22, this._ctx) ) {
					case 1:
						{
						_localctx = new SimpleDateContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CronoScriptParser.RULE_simpleDate);
						this.state = 135;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 136;
						this.match(CronoScriptParser.PLUS);
						this.state = 137;
						this.duration(0);
						}
						break;

					case 2:
						{
						_localctx = new SimpleDateContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CronoScriptParser.RULE_simpleDate);
						this.state = 138;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 139;
						this.match(CronoScriptParser.MINUS);
						this.state = 140;
						this.duration(0);
						}
						break;
					}
					}
				}
				this.state = 145;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 23, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public delayedDate(): DelayedDateContext {
		let _localctx: DelayedDateContext = new DelayedDateContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, CronoScriptParser.RULE_delayedDate);
		try {
			this.state = 159;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 24, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 146;
				this.match(CronoScriptParser.ID);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 147;
				this.simpleDate(0);
				this.state = 148;
				this.match(CronoScriptParser.DELAY);
				this.state = 149;
				this.simpleDate(0);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 151;
				this.simpleDate(0);
				this.state = 152;
				this.match(CronoScriptParser.DELAYPLUS);
				this.state = 153;
				this.duration(0);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 155;
				this.simpleDate(0);
				this.state = 156;
				this.match(CronoScriptParser.DELAYMINUS);
				this.state = 157;
				this.duration(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public duration(): DurationContext;
	public duration(_p: number): DurationContext;
	// @RuleVersion(0)
	public duration(_p?: number): DurationContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: DurationContext = new DurationContext(this._ctx, _parentState);
		let _prevctx: DurationContext = _localctx;
		let _startState: number = 18;
		this.enterRecursionRule(_localctx, 18, CronoScriptParser.RULE_duration, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 172;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				{
				this.state = 162;
				this.match(CronoScriptParser.ID);
				}
				break;

			case 2:
				{
				this.state = 163;
				this.match(CronoScriptParser.INT);
				this.state = 164;
				this.timeUnit();
				}
				break;

			case 3:
				{
				this.state = 165;
				this.match(CronoScriptParser.INT);
				this.state = 166;
				this.match(CronoScriptParser.MULT);
				this.state = 167;
				this.duration(5);
				}
				break;

			case 4:
				{
				this.state = 168;
				this.date();
				this.state = 169;
				this.match(CronoScriptParser.MINUS);
				this.state = 170;
				this.date();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 188;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 27, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 186;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 26, this._ctx) ) {
					case 1:
						{
						_localctx = new DurationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CronoScriptParser.RULE_duration);
						this.state = 174;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 175;
						this.match(CronoScriptParser.PLUS);
						this.state = 176;
						this.duration(4);
						}
						break;

					case 2:
						{
						_localctx = new DurationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CronoScriptParser.RULE_duration);
						this.state = 177;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 178;
						this.match(CronoScriptParser.MINUS);
						this.state = 179;
						this.duration(3);
						}
						break;

					case 3:
						{
						_localctx = new DurationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CronoScriptParser.RULE_duration);
						this.state = 180;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 181;
						this.match(CronoScriptParser.MULT);
						this.state = 182;
						this.match(CronoScriptParser.INT);
						}
						break;

					case 4:
						{
						_localctx = new DurationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CronoScriptParser.RULE_duration);
						this.state = 183;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 184;
						this.match(CronoScriptParser.DIV);
						this.state = 185;
						this.match(CronoScriptParser.INT);
						}
						break;
					}
					}
				}
				this.state = 190;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 27, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public timeUnit(): TimeUnitContext {
		let _localctx: TimeUnitContext = new TimeUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, CronoScriptParser.RULE_timeUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CronoScriptParser.T__5) | (1 << CronoScriptParser.T__6) | (1 << CronoScriptParser.T__7) | (1 << CronoScriptParser.T__8) | (1 << CronoScriptParser.T__9) | (1 << CronoScriptParser.T__10) | (1 << CronoScriptParser.T__11) | (1 << CronoScriptParser.T__12) | (1 << CronoScriptParser.T__13) | (1 << CronoScriptParser.T__14) | (1 << CronoScriptParser.T__15) | (1 << CronoScriptParser.T__16) | (1 << CronoScriptParser.T__17) | (1 << CronoScriptParser.T__18) | (1 << CronoScriptParser.T__19) | (1 << CronoScriptParser.T__20) | (1 << CronoScriptParser.T__21) | (1 << CronoScriptParser.T__22) | (1 << CronoScriptParser.T__23) | (1 << CronoScriptParser.T__24) | (1 << CronoScriptParser.T__25))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, CronoScriptParser.RULE_variableDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 193;
			this.type();
			this.state = 194;
			this.match(CronoScriptParser.ID);
			this.state = 195;
			this.match(CronoScriptParser.EQUALS);
			this.state = 196;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type(): TypeContext {
		let _localctx: TypeContext = new TypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, CronoScriptParser.RULE_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 198;
			_la = this._input.LA(1);
			if (!(((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (CronoScriptParser.STRING_KW - 37)) | (1 << (CronoScriptParser.DATE_KW - 37)) | (1 << (CronoScriptParser.SPAN_KW - 37)) | (1 << (CronoScriptParser.DURATION_KW - 37)) | (1 << (CronoScriptParser.EVENT_KW - 37)) | (1 << (CronoScriptParser.TASK_KW - 37)) | (1 << (CronoScriptParser.TIMELINE_KW - 37)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
